--- a/variables.css
+++ b/variables.css
@@ -1,8 +1,55 @@
 :root {
-  --red-10: #ff5050;
-  --red-20: #ff1414;
-  --red-30: #880000;
-  --bg-color: var(--red-10);
-  --text-color: var(--red-30);
-  --accent-color: var(--red-20);
+  --color-black: #000000;
+  --color-black-900: #1a1a1a;
+  --color-black-800: #333333;
+  --color-black-700: #666666;
+  --color-black-600: #8c8c8c;
+  --color-black-500: #bfbfbf;
+  --color-black-400: #d3d3d3;
+  --color-black-300: #e6e6e6;
+  --color-black-200: #f0f0f0;
+  --color-black-100: #f4f4f4;
+  --color-white: #ffffff;
+  --color-brown-900: #463d28;
+  --color-brown-700: #665a3b;
+  --color-brown-500: #8f8362;
+  --color-brown-300: #b7a883;
+  --color-brown-100: #c3b59b;
+  --color-blue-900: #002329;
+  --color-blue-700: #1379c1;
+  --color-blue-500: #469ace;
+  --color-blue-300: #9cc1d3;
+  --color-blue-100: #e3edf2;
+  --color-pink-dark: #881b5b;
+  --color-pink: #e90089;
+  --color-pink-light: #ffaacc;
+  --color-green-dark: #127a4b;
+  --color-green: #42b983;
+  --color-green-light: #ddeeaa;
+  --color-red-dark: #832219;
+  --color-red: #ec2020;
+  --color-red-light: #feb6b6;
+  --color-orange-dark: #824217;
+  --color-orange: #ff6600;
+  --color-orange-light: #f79983;
+  --color-yellow-dark: #8c6f1b;
+  --color-yellow: #ffc10c;
+  --color-yellow-light: #f9e7b5;
+  --spacing-1: 0.25rem;
+  --spacing-0: 0.125rem;
+  --spacing-2: 0.5rem;
+  --spacing-3: 0.75rem;
+  --spacing-4: 1rem;
+  --spacing-5: 1.25rem;
+  --spacing-6: 1.5rem;
+  --spacing-7: 1.75rem;
+  --spacing-8: 2rem;
+  --spacing-9: 2.25rem;
+  --spacing-10: 2.5rem;
+  --spacing-11: 3rem;
+  --spacing-12: 4rem;
+  --spacing-13: 4.5rem;
+  --spacing-14: 5rem;
+  --spacing-15: 6rem;
+  --spacing-16: 8rem;
 }
