chnages to styles

--- a/src/tokens/css/_variables.css
+++ b/src/tokens/css/_variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Thu, 20 Jun 2024 17:31:35 GMT
+ * Generated on Fri, 21 Jun 2024 09:43:45 GMT
  */
 
 
@@ -59,136 +59,135 @@
   --tokens-spacing-spacing-15: 6rem;
   --tokens-spacing-spacing-16: 8rem;
   --tokens-spacing-spacing-0: 0.125rem;
-  --tokens-hover-color-default: #463d28;
   --font-families-helvetica-neue: Helvetica Neue;
-  --line-heights-0: 48;
-  --line-heights-1: 40;
-  --line-heights-2: 32;
-  --line-heights-3: 28;
-  --line-heights-4: 24;
-  --line-heights-5: 22;
-  --line-heights-6: 20;
-  --line-heights-7: 16;
-  --line-heights-8: 14;
+  --font-families-impact: Impact;
+  --line-heights-0: 48px;
+  --line-heights-1: 40px;
+  --line-heights-2: 32px;
+  --line-heights-3: 28px;
+  --line-heights-4: 24px;
+  --line-heights-5: 22px;
+  --line-heights-6: 20px;
+  --line-heights-7: 16px;
+  --line-heights-8: 14px;
   --font-weights-helvetica-neue-0: Condensed Bold;
   --font-weights-helvetica-neue-1: Medium;
   --font-weights-helvetica-neue-2: Regular;
-  --font-size-0: 12;
-  --font-size-1: 14;
-  --font-size-2: 16;
-  --font-size-3: 18;
-  --font-size-4: 20;
-  --font-size-5: 24;
-  --font-size-6: 32;
-  --font-size-7: 40;
-  --font-size-8: 48;
+  --font-weights-font-weight-medium: 700;
+  --font-weights-font-weight-regular: 500;
+  --font-size-0: 12px;
+  --font-size-1: 14px;
+  --font-size-2: 16px;
+  --font-size-3: 18px;
+  --font-size-4: 20px;
+  --font-size-5: 24px;
+  --font-size-6: 32px;
+  --font-size-7: 40px;
+  --font-size-8: 48px;
   --letter-spacing-0: 0%;
   --paragraph-spacing-0: 0;
   --paragraph-indent-0: 0px;
   --text-case-none: none;
   --text-decoration-none: none;
   --text-decoration-underline: underline;
-  --typography-h1-heading-main-font-family: Helvetica Neue;
-  --typography-h1-heading-main-font-weight: Condensed Bold;
-  --typography-h1-heading-main-line-height: 48;
-  --typography-h1-heading-main-font-size: 48;
-  --typography-h1-heading-main-letter-spacing: 0%;
-  --typography-h1-heading-main-paragraph-spacing: 0;
-  --typography-h1-heading-main-text-decoration: none;
-  --typography-h1-heading-main-text-case: none;
-  --typography-h2-heading-main-font-family: Helvetica Neue;
-  --typography-h2-heading-main-font-weight: Condensed Bold;
-  --typography-h2-heading-main-line-height: 40;
-  --typography-h2-heading-main-font-size: 40;
-  --typography-h2-heading-main-letter-spacing: 0%;
-  --typography-h2-heading-main-paragraph-spacing: 0;
-  --typography-h2-heading-main-text-decoration: none;
-  --typography-h2-heading-main-text-case: none;
-  --typography-h3-heading-main-font-family: Helvetica Neue;
-  --typography-h3-heading-main-font-weight: Condensed Bold;
-  --typography-h3-heading-main-line-height: 32;
-  --typography-h3-heading-main-font-size: 32;
-  --typography-h3-heading-main-letter-spacing: 0%;
-  --typography-h3-heading-main-paragraph-spacing: 0;
-  --typography-h3-heading-main-text-decoration: none;
-  --typography-h3-heading-main-text-case: none;
-  --typography-h4-heading-main-font-family: Helvetica Neue;
-  --typography-h4-heading-main-font-weight: Condensed Bold;
-  --typography-h4-heading-main-line-height: 28;
-  --typography-h4-heading-main-font-size: 24;
-  --typography-h4-heading-main-letter-spacing: 0%;
-  --typography-h4-heading-main-paragraph-spacing: 0;
-  --typography-h4-heading-main-text-decoration: none;
-  --typography-h4-heading-main-text-case: none;
-  --typography-h5-heading-main-font-family: Helvetica Neue;
-  --typography-h5-heading-main-font-weight: Medium;
-  --typography-h5-heading-main-line-height: 24;
-  --typography-h5-heading-main-font-size: 20;
-  --typography-h5-heading-main-letter-spacing: 0%;
-  --typography-h5-heading-main-paragraph-spacing: 0;
-  --typography-h5-heading-main-text-decoration: none;
-  --typography-h5-heading-main-text-case: none;
-  --typography-body-large-font-family: Helvetica Neue;
-  --typography-body-large-font-weight: Regular;
-  --typography-body-large-line-height: 22;
-  --typography-body-large-font-size: 18;
-  --typography-body-large-letter-spacing: 0%;
-  --typography-body-large-paragraph-spacing: 0;
-  --typography-body-large-paragraph-indent: 0px;
-  --typography-body-large-text-decoration: none;
-  --typography-body-large-text-case: none;
-  --typography-body-medium-font-family: Helvetica Neue;
-  --typography-body-medium-font-weight: Regular;
-  --typography-body-medium-line-height: 20;
-  --typography-body-medium-font-size: 16;
-  --typography-body-medium-letter-spacing: 0%;
-  --typography-body-medium-paragraph-spacing: 0;
-  --typography-body-medium-paragraph-indent: 0px;
-  --typography-body-medium-text-decoration: none;
-  --typography-body-medium-text-case: none;
-  --typography-body-small-font-family: Helvetica Neue;
-  --typography-body-small-font-weight: Regular;
-  --typography-body-small-line-height: 16;
-  --typography-body-small-font-size: 14;
-  --typography-body-small-letter-spacing: 0%;
-  --typography-body-small-paragraph-spacing: 0;
-  --typography-body-small-paragraph-indent: 0px;
-  --typography-body-small-text-decoration: none;
-  --typography-body-small-text-case: none;
-  --typography-links-large-font-family: Helvetica Neue;
-  --typography-links-large-font-weight: Regular;
-  --typography-links-large-line-height: 22;
-  --typography-links-large-font-size: 18;
-  --typography-links-large-letter-spacing: 0%;
-  --typography-links-large-paragraph-spacing: 0;
-  --typography-links-large-paragraph-indent: 0px;
-  --typography-links-large-text-decoration: underline;
-  --typography-links-large-text-case: none;
-  --typography-links-medium-font-family: Helvetica Neue;
-  --typography-links-medium-font-weight: Regular;
-  --typography-links-medium-line-height: 20;
-  --typography-links-medium-font-size: 16;
-  --typography-links-medium-letter-spacing: 0%;
-  --typography-links-medium-paragraph-spacing: 0;
-  --typography-links-medium-paragraph-indent: 0px;
-  --typography-links-medium-text-decoration: underline;
-  --typography-links-medium-text-case: none;
-  --typography-links-small-font-family: Helvetica Neue;
-  --typography-links-small-font-weight: Regular;
-  --typography-links-small-line-height: 16;
-  --typography-links-small-font-size: 14;
-  --typography-links-small-letter-spacing: 0%;
-  --typography-links-small-paragraph-spacing: 0;
-  --typography-links-small-paragraph-indent: 0px;
-  --typography-links-small-text-decoration: underline;
-  --typography-links-small-text-case: none;
-  --typography-caption-font-family: Helvetica Neue;
-  --typography-caption-font-weight: Regular;
-  --typography-caption-line-height: 14;
-  --typography-caption-font-size: 12;
-  --typography-caption-letter-spacing: 0%;
-  --typography-caption-paragraph-spacing: 0;
-  --typography-caption-paragraph-indent: 0px;
-  --typography-caption-text-decoration: none;
-  --typography-caption-text-case: none;
+  --h1-heading-main-font-family: Impact;
+  --h1-heading-main-font-weight: 700;
+  --h1-heading-main-line-height: 48px;
+  --h1-heading-main-font-size: 48px;
+  --h1-heading-main-letter-spacing: 0%;
+  --h1-heading-main-paragraph-spacing: 0;
+  --h1-heading-main-text-decoration: none;
+  --h1-heading-main-text-case: none;
+  --h2-heading-main-font-family: Impact;
+  --h2-heading-main-font-weight: 700;
+  --h2-heading-main-line-height: 40px;
+  --h2-heading-main-font-size: 40px;
+  --h2-heading-main-letter-spacing: 0%;
+  --h2-heading-main-paragraph-spacing: 0;
+  --h2-heading-main-text-decoration: none;
+  --h2-heading-main-text-case: none;
+  --h3-heading-main-font-family: Impact;
+  --h3-heading-main-font-weight: 700;
+  --h3-heading-main-line-height: 32px;
+  --h3-heading-main-font-size: 32px;
+  --h3-heading-main-letter-spacing: 0%;
+  --h3-heading-main-paragraph-spacing: 0;
+  --h3-heading-main-text-decoration: none;
+  --h3-heading-main-text-case: none;
+  --h4-heading-main-font-family: Impact;
+  --h4-heading-main-font-weight: 700;
+  --h4-heading-main-line-height: 28px;
+  --h4-heading-main-font-size: 24px;
+  --h4-heading-main-letter-spacing: 0%;
+  --h4-heading-main-paragraph-spacing: 0;
+  --h4-heading-main-text-decoration: none;
+  --h4-heading-main-text-case: none;
+  --h5-heading-main-font-family: Helvetica Neue;
+  --h5-heading-main-font-weight: 500;
+  --h5-heading-main-line-height: 24px;
+  --h5-heading-main-font-size: 20px;
+  --h5-heading-main-letter-spacing: 0%;
+  --h5-heading-main-paragraph-spacing: 0;
+  --h5-heading-main-text-decoration: none;
+  --h5-heading-main-text-case: none;
+  --body-large-font-family: Helvetica Neue;
+  --body-large-font-weight: 500;
+  --body-large-line-height: 22px;
+  --body-large-font-size: 18px;
+  --body-large-letter-spacing: 0%;
+  --body-large-paragraph-spacing: 0;
+  --body-large-text-decoration: none;
+  --body-large-text-case: none;
+  --body-medium-font-family: Helvetica Neue;
+  --body-medium-font-weight: 500;
+  --body-medium-line-height: 20px;
+  --body-medium-font-size: 16px;
+  --body-medium-letter-spacing: 0%;
+  --body-medium-paragraph-spacing: 0;
+  --body-medium-text-decoration: none;
+  --body-medium-text-case: none;
+  --body-small-font-family: Helvetica Neue;
+  --body-small-font-weight: 500;
+  --body-small-line-height: 16px;
+  --body-small-font-size: 14px;
+  --body-small-letter-spacing: 0%;
+  --body-small-paragraph-spacing: 0;
+  --body-small-text-decoration: none;
+  --body-small-text-case: none;
+  --links-large-font-family: Helvetica Neue;
+  --links-large-font-weight: 500;
+  --links-large-line-height: 22px;
+  --links-large-font-size: 18px;
+  --links-large-letter-spacing: 0%;
+  --links-large-paragraph-spacing: 0;
+  --links-large-paragraph-indent: 0px;
+  --links-large-text-decoration: underline;
+  --links-large-text-case: none;
+  --links-medium-font-family: Helvetica Neue;
+  --links-medium-font-weight: 500;
+  --links-medium-line-height: 20px;
+  --links-medium-font-size: 16px;
+  --links-medium-letter-spacing: 0%;
+  --links-medium-paragraph-spacing: 0;
+  --links-medium-paragraph-indent: 0px;
+  --links-medium-text-decoration: underline;
+  --links-medium-text-case: none;
+  --links-small-font-family: Helvetica Neue;
+  --links-small-font-weight: 500;
+  --links-small-line-height: 16px;
+  --links-small-font-size: 14px;
+  --links-small-letter-spacing: 0%;
+  --links-small-paragraph-spacing: 0;
+  --links-small-paragraph-indent: 0px;
+  --links-small-text-decoration: underline;
+  --links-small-text-case: none;
+  --caption-font-family: Helvetica Neue;
+  --caption-font-weight: 500;
+  --caption-line-height: 14px;
+  --caption-font-size: 12px;
+  --caption-letter-spacing: 0%;
+  --caption-paragraph-spacing: 0;
+  --caption-paragraph-indent: 0px;
+  --caption-text-decoration: none;
+  --caption-text-case: none;
 }
