--- a/src/tokens/css/_variables.css
+++ b/src/tokens/css/_variables.css
@@ -1,193 +1,212 @@
 /**
  * Do not edit directly
- * Generated on Fri, 21 Jun 2024 09:43:45 GMT
+ * Generated on Fri, 21 Jun 2024 14:53:11 GMT
  */
 
 
 
 :root {
-  --tokens-color-black: #000000;
-  --tokens-color-black-900: #1a1a1a;
-  --tokens-color-black-800: #333333;
-  --tokens-color-black-700: #666666;
-  --tokens-color-black-600: #8c8c8c;
-  --tokens-color-black-500: #bfbfbf;
-  --tokens-color-black-400: #d3d3d3;
-  --tokens-color-black-300: #e6e6e6;
-  --tokens-color-black-200: #f0f0f0;
-  --tokens-color-black-100: #f4f4f4;
-  --tokens-color-white: #ffffff;
-  --tokens-color-brown-900: #463d28;
-  --tokens-color-brown-700: #665a3b;
-  --tokens-color-brown-500: #8f8362;
-  --tokens-color-brown-300: #b7a883;
-  --tokens-color-brown-100: #c3b59b;
-  --tokens-color-blue-900: #002329;
-  --tokens-color-blue-700: #1379c1;
-  --tokens-color-blue-500: #469ace;
-  --tokens-color-blue-300: #9cc1d3;
-  --tokens-color-blue-100: #e3edf2;
-  --tokens-color-pink-dark: #881b5b;
-  --tokens-color-pink: #e90089;
-  --tokens-color-pink-light: #ffaacc;
-  --tokens-color-green-dark: #127a4b;
-  --tokens-color-green: #42b983;
-  --tokens-color-green-light: #ddeeaa;
-  --tokens-color-red-dark: #832219;
-  --tokens-color-red: #ec2020;
-  --tokens-color-red-light: #feb6b6;
-  --tokens-color-orange-dark: #824217;
-  --tokens-color-orange: #ff6600;
-  --tokens-color-orange-light: #f79983;
-  --tokens-color-yellow-dark: #8c6f1b;
-  --tokens-color-yellow: #ffc10c;
-  --tokens-color-yellow-light: #f9e7b5;
-  --tokens-spacing-spacing-1: 0.25rem;
-  --tokens-spacing-spacing-2: 0.5rem;
-  --tokens-spacing-spacing-3: 0.75rem;
-  --tokens-spacing-spacing-4: 1rem;
-  --tokens-spacing-spacing-5: 1.25rem;
-  --tokens-spacing-spacing-6: 1.5rem;
-  --tokens-spacing-spacing-7: 1.75rem;
-  --tokens-spacing-spacing-8: 2rem;
-  --tokens-spacing-spacing-9: 2.25rem;
-  --tokens-spacing-spacing-10: 2.5rem;
-  --tokens-spacing-spacing-11: 3rem;
-  --tokens-spacing-spacing-12: 4rem;
-  --tokens-spacing-spacing-13: 4.5rem;
-  --tokens-spacing-spacing-14: 5rem;
-  --tokens-spacing-spacing-15: 6rem;
-  --tokens-spacing-spacing-16: 8rem;
-  --tokens-spacing-spacing-0: 0.125rem;
-  --font-families-helvetica-neue: Helvetica Neue;
-  --font-families-impact: Impact;
-  --line-heights-0: 48px;
-  --line-heights-1: 40px;
-  --line-heights-2: 32px;
-  --line-heights-3: 28px;
-  --line-heights-4: 24px;
-  --line-heights-5: 22px;
-  --line-heights-6: 20px;
-  --line-heights-7: 16px;
-  --line-heights-8: 14px;
-  --font-weights-helvetica-neue-0: Condensed Bold;
-  --font-weights-helvetica-neue-1: Medium;
-  --font-weights-helvetica-neue-2: Regular;
-  --font-weights-font-weight-medium: 700;
-  --font-weights-font-weight-regular: 500;
-  --font-size-0: 12px;
-  --font-size-1: 14px;
-  --font-size-2: 16px;
-  --font-size-3: 18px;
-  --font-size-4: 20px;
-  --font-size-5: 24px;
-  --font-size-6: 32px;
-  --font-size-7: 40px;
-  --font-size-8: 48px;
-  --letter-spacing-0: 0%;
-  --paragraph-spacing-0: 0;
-  --paragraph-indent-0: 0px;
-  --text-case-none: none;
-  --text-decoration-none: none;
-  --text-decoration-underline: underline;
-  --h1-heading-main-font-family: Impact;
-  --h1-heading-main-font-weight: 700;
-  --h1-heading-main-line-height: 48px;
-  --h1-heading-main-font-size: 48px;
-  --h1-heading-main-letter-spacing: 0%;
-  --h1-heading-main-paragraph-spacing: 0;
-  --h1-heading-main-text-decoration: none;
-  --h1-heading-main-text-case: none;
-  --h2-heading-main-font-family: Impact;
-  --h2-heading-main-font-weight: 700;
-  --h2-heading-main-line-height: 40px;
-  --h2-heading-main-font-size: 40px;
-  --h2-heading-main-letter-spacing: 0%;
-  --h2-heading-main-paragraph-spacing: 0;
-  --h2-heading-main-text-decoration: none;
-  --h2-heading-main-text-case: none;
-  --h3-heading-main-font-family: Impact;
-  --h3-heading-main-font-weight: 700;
-  --h3-heading-main-line-height: 32px;
-  --h3-heading-main-font-size: 32px;
-  --h3-heading-main-letter-spacing: 0%;
-  --h3-heading-main-paragraph-spacing: 0;
-  --h3-heading-main-text-decoration: none;
-  --h3-heading-main-text-case: none;
-  --h4-heading-main-font-family: Impact;
-  --h4-heading-main-font-weight: 700;
-  --h4-heading-main-line-height: 28px;
-  --h4-heading-main-font-size: 24px;
-  --h4-heading-main-letter-spacing: 0%;
-  --h4-heading-main-paragraph-spacing: 0;
-  --h4-heading-main-text-decoration: none;
-  --h4-heading-main-text-case: none;
-  --h5-heading-main-font-family: Helvetica Neue;
-  --h5-heading-main-font-weight: 500;
-  --h5-heading-main-line-height: 24px;
-  --h5-heading-main-font-size: 20px;
-  --h5-heading-main-letter-spacing: 0%;
-  --h5-heading-main-paragraph-spacing: 0;
-  --h5-heading-main-text-decoration: none;
-  --h5-heading-main-text-case: none;
-  --body-large-font-family: Helvetica Neue;
-  --body-large-font-weight: 500;
-  --body-large-line-height: 22px;
-  --body-large-font-size: 18px;
-  --body-large-letter-spacing: 0%;
-  --body-large-paragraph-spacing: 0;
-  --body-large-text-decoration: none;
-  --body-large-text-case: none;
-  --body-medium-font-family: Helvetica Neue;
-  --body-medium-font-weight: 500;
-  --body-medium-line-height: 20px;
-  --body-medium-font-size: 16px;
-  --body-medium-letter-spacing: 0%;
-  --body-medium-paragraph-spacing: 0;
-  --body-medium-text-decoration: none;
-  --body-medium-text-case: none;
-  --body-small-font-family: Helvetica Neue;
-  --body-small-font-weight: 500;
-  --body-small-line-height: 16px;
-  --body-small-font-size: 14px;
-  --body-small-letter-spacing: 0%;
-  --body-small-paragraph-spacing: 0;
-  --body-small-text-decoration: none;
-  --body-small-text-case: none;
-  --links-large-font-family: Helvetica Neue;
-  --links-large-font-weight: 500;
-  --links-large-line-height: 22px;
-  --links-large-font-size: 18px;
-  --links-large-letter-spacing: 0%;
-  --links-large-paragraph-spacing: 0;
-  --links-large-paragraph-indent: 0px;
-  --links-large-text-decoration: underline;
-  --links-large-text-case: none;
-  --links-medium-font-family: Helvetica Neue;
-  --links-medium-font-weight: 500;
-  --links-medium-line-height: 20px;
-  --links-medium-font-size: 16px;
-  --links-medium-letter-spacing: 0%;
-  --links-medium-paragraph-spacing: 0;
-  --links-medium-paragraph-indent: 0px;
-  --links-medium-text-decoration: underline;
-  --links-medium-text-case: none;
-  --links-small-font-family: Helvetica Neue;
-  --links-small-font-weight: 500;
-  --links-small-line-height: 16px;
-  --links-small-font-size: 14px;
-  --links-small-letter-spacing: 0%;
-  --links-small-paragraph-spacing: 0;
-  --links-small-paragraph-indent: 0px;
-  --links-small-text-decoration: underline;
-  --links-small-text-case: none;
-  --caption-font-family: Helvetica Neue;
-  --caption-font-weight: 500;
-  --caption-line-height: 14px;
-  --caption-font-size: 12px;
-  --caption-letter-spacing: 0%;
-  --caption-paragraph-spacing: 0;
-  --caption-paragraph-indent: 0px;
-  --caption-text-decoration: none;
-  --caption-text-case: none;
+  --tokens-tokens-color-black: #000000;
+  --tokens-tokens-color-black-900: #1a1a1a;
+  --tokens-tokens-color-black-800: #333333;
+  --tokens-tokens-color-black-700: #666666;
+  --tokens-tokens-color-black-600: #8c8c8c;
+  --tokens-tokens-color-black-500: #bfbfbf;
+  --tokens-tokens-color-black-400: #d3d3d3;
+  --tokens-tokens-color-black-300: #e6e6e6;
+  --tokens-tokens-color-black-200: #f0f0f0;
+  --tokens-tokens-color-black-100: #f4f4f4;
+  --tokens-tokens-color-white: #ffffff;
+  --tokens-tokens-color-brown-900: #463d28;
+  --tokens-tokens-color-brown-700: #665a3b;
+  --tokens-tokens-color-brown-500: #8f8362;
+  --tokens-tokens-color-brown-300: #b7a883;
+  --tokens-tokens-color-brown-100: #c3b59b;
+  --tokens-tokens-color-blue-900: #002329;
+  --tokens-tokens-color-blue-700: #1379c1;
+  --tokens-tokens-color-blue-500: #469ace;
+  --tokens-tokens-color-blue-300: #9cc1d3;
+  --tokens-tokens-color-blue-100: #e3edf2;
+  --tokens-tokens-color-pink-dark: #881b5b;
+  --tokens-tokens-color-pink: #e90089;
+  --tokens-tokens-color-pink-light: #ffaacc;
+  --tokens-tokens-color-green-dark: #127a4b;
+  --tokens-tokens-color-green: #42b983;
+  --tokens-tokens-color-green-light: #ddeeaa;
+  --tokens-tokens-color-red-dark: #832219;
+  --tokens-tokens-color-red: #ec2020;
+  --tokens-tokens-color-red-light: #feb6b6;
+  --tokens-tokens-color-orange-dark: #824217;
+  --tokens-tokens-color-orange: #ff6600;
+  --tokens-tokens-color-orange-light: #f79983;
+  --tokens-tokens-color-yellow-dark: #8c6f1b;
+  --tokens-tokens-color-yellow: #ffc10c;
+  --tokens-tokens-color-yellow-light: #f9e7b5;
+  --tokens-tokens-spacing-spacing-1: 0.25rem;
+  --tokens-tokens-spacing-spacing-2: 0.5rem;
+  --tokens-tokens-spacing-spacing-3: 0.75rem;
+  --tokens-tokens-spacing-spacing-4: 1rem;
+  --tokens-tokens-spacing-spacing-5: 1.25rem;
+  --tokens-tokens-spacing-spacing-6: 1.5rem;
+  --tokens-tokens-spacing-spacing-7: 1.75rem;
+  --tokens-tokens-spacing-spacing-8: 2rem;
+  --tokens-tokens-spacing-spacing-9: 2.25rem;
+  --tokens-tokens-spacing-spacing-10: 2.5rem;
+  --tokens-tokens-spacing-spacing-11: 3rem;
+  --tokens-tokens-spacing-spacing-12: 4rem;
+  --tokens-tokens-spacing-spacing-13: 4.5rem;
+  --tokens-tokens-spacing-spacing-14: 5rem;
+  --tokens-tokens-spacing-spacing-15: 6rem;
+  --tokens-tokens-spacing-spacing-16: 8rem;
+  --tokens-tokens-spacing-spacing-0: 0.125rem;
+  --tokens-font-families-helvetica-neue: Helvetica Neue;
+  --tokens-font-families-impact: Impact;
+  --tokens-line-heights-0: 48px;
+  --tokens-line-heights-1: 40px;
+  --tokens-line-heights-2: 32px;
+  --tokens-line-heights-3: 28px;
+  --tokens-line-heights-4: 24px;
+  --tokens-line-heights-5: 22px;
+  --tokens-line-heights-6: 20px;
+  --tokens-line-heights-7: 16px;
+  --tokens-line-heights-8: 14px;
+  --tokens-font-weights-helvetica-neue-0: Condensed Bold;
+  --tokens-font-weights-helvetica-neue-1: Medium;
+  --tokens-font-weights-helvetica-neue-2: Regular;
+  --tokens-font-weights-font-weight-medium: 700;
+  --tokens-font-weights-font-weight-regular: 500;
+  --tokens-font-size-0: 12px;
+  --tokens-font-size-1: 14px;
+  --tokens-font-size-2: 16px;
+  --tokens-font-size-3: 18px;
+  --tokens-font-size-4: 20px;
+  --tokens-font-size-5: 24;
+  --tokens-font-size-6: 32;
+  --tokens-font-size-7: 40;
+  --tokens-font-size-8: 48;
+  --tokens-letter-spacing-0: 0%;
+  --tokens-paragraph-spacing-0: 0;
+  --tokens-paragraph-indent-0: 0px;
+  --tokens-text-case-none: none;
+  --tokens-text-case-uppercase: uppercase;
+  --tokens-text-decoration-none: none;
+  --tokens-text-decoration-underline: underline;
+  --tokens-h1-heading-main-font-family: Impact;
+  --tokens-h1-heading-main-font-weight: 700;
+  --tokens-h1-heading-main-line-height: 48px;
+  --tokens-h1-heading-main-font-size: 48px;
+  --tokens-h1-heading-main-letter-spacing: 0%;
+  --tokens-h1-heading-main-paragraph-spacing: 0;
+  --tokens-h1-heading-main-text-decoration: none;
+  --tokens-h1-heading-main-text-case: none;
+  --tokens-h2-heading-main-font-family: Impact;
+  --tokens-h2-heading-main-font-weight: 700;
+  --tokens-h2-heading-main-line-height: 40px;
+  --tokens-h2-heading-main-font-size: 40px;
+  --tokens-h2-heading-main-letter-spacing: 0%;
+  --tokens-h2-heading-main-paragraph-spacing: 0;
+  --tokens-h2-heading-main-text-decoration: none;
+  --tokens-h2-heading-main-text-case: none;
+  --tokens-h3-heading-main-font-family: Impact;
+  --tokens-h3-heading-main-font-weight: 700;
+  --tokens-h3-heading-main-line-height: 32px;
+  --tokens-h3-heading-main-font-size: 32px;
+  --tokens-h3-heading-main-letter-spacing: 0%;
+  --tokens-h3-heading-main-paragraph-spacing: 0;
+  --tokens-h3-heading-main-text-decoration: none;
+  --tokens-h3-heading-main-text-case: none;
+  --tokens-h4-heading-main-font-family: Impact;
+  --tokens-h4-heading-main-font-weight: 700;
+  --tokens-h4-heading-main-line-height: 28px;
+  --tokens-h4-heading-main-font-size: 24px;
+  --tokens-h4-heading-main-letter-spacing: 0%;
+  --tokens-h4-heading-main-paragraph-spacing: 0;
+  --tokens-h4-heading-main-text-decoration: none;
+  --tokens-h4-heading-main-text-case: none;
+  --tokens-h5-heading-main-font-family: Helvetica Neue;
+  --tokens-h5-heading-main-font-weight: 500;
+  --tokens-h5-heading-main-line-height: 24px;
+  --tokens-h5-heading-main-font-size: 20px;
+  --tokens-h5-heading-main-letter-spacing: 0%;
+  --tokens-h5-heading-main-paragraph-spacing: 0;
+  --tokens-h5-heading-main-text-decoration: none;
+  --tokens-h5-heading-main-text-case: none;
+  --tokens-body-large-font-family: Helvetica Neue;
+  --tokens-body-large-font-weight: 500;
+  --tokens-body-large-line-height: 22px;
+  --tokens-body-large-font-size: 18px;
+  --tokens-body-large-letter-spacing: 0%;
+  --tokens-body-large-paragraph-spacing: 0;
+  --tokens-body-large-text-decoration: none;
+  --tokens-body-large-text-case: none;
+  --tokens-body-medium-font-family: Helvetica Neue;
+  --tokens-body-medium-font-weight: 500;
+  --tokens-body-medium-line-height: 20px;
+  --tokens-body-medium-font-size: 16px;
+  --tokens-body-medium-letter-spacing: 0%;
+  --tokens-body-medium-paragraph-spacing: 0;
+  --tokens-body-medium-text-decoration: none;
+  --tokens-body-medium-text-case: none;
+  --tokens-body-small-font-family: Helvetica Neue;
+  --tokens-body-small-font-weight: 500;
+  --tokens-body-small-line-height: 16px;
+  --tokens-body-small-font-size: 14px;
+  --tokens-body-small-letter-spacing: 0%;
+  --tokens-body-small-paragraph-spacing: 0;
+  --tokens-body-small-text-decoration: none;
+  --tokens-body-small-text-case: none;
+  --tokens-links-large-font-family: Helvetica Neue;
+  --tokens-links-large-font-weight: 500;
+  --tokens-links-large-line-height: 22px;
+  --tokens-links-large-font-size: 18px;
+  --tokens-links-large-letter-spacing: 0%;
+  --tokens-links-large-paragraph-spacing: 0;
+  --tokens-links-large-paragraph-indent: 0px;
+  --tokens-links-large-text-decoration: underline;
+  --tokens-links-large-text-case: none;
+  --tokens-links-medium-font-family: Helvetica Neue;
+  --tokens-links-medium-font-weight: 500;
+  --tokens-links-medium-line-height: 20px;
+  --tokens-links-medium-font-size: 16px;
+  --tokens-links-medium-letter-spacing: 0%;
+  --tokens-links-medium-paragraph-spacing: 0;
+  --tokens-links-medium-paragraph-indent: 0px;
+  --tokens-links-medium-text-decoration: underline;
+  --tokens-links-medium-text-case: none;
+  --tokens-links-small-font-family: Helvetica Neue;
+  --tokens-links-small-font-weight: 500;
+  --tokens-links-small-line-height: 16px;
+  --tokens-links-small-font-size: 14px;
+  --tokens-links-small-letter-spacing: 0%;
+  --tokens-links-small-paragraph-spacing: 0;
+  --tokens-links-small-paragraph-indent: 0px;
+  --tokens-links-small-text-decoration: underline;
+  --tokens-links-small-text-case: none;
+  --tokens-caption-font-family: Helvetica Neue;
+  --tokens-caption-font-weight: 500;
+  --tokens-caption-line-height: 14px;
+  --tokens-caption-font-size: 12px;
+  --tokens-caption-letter-spacing: 0%;
+  --tokens-caption-paragraph-spacing: 0;
+  --tokens-caption-paragraph-indent: 0px;
+  --tokens-caption-text-decoration: none;
+  --tokens-caption-text-case: none;
+  --tokens-button-font-family: Impact;
+  --tokens-button-font-weight: 700;
+  --tokens-button-line-height: 20px;
+  --tokens-button-font-size: 16px;
+  --tokens-button-letter-spacing: 0%;
+  --tokens-button-paragraph-spacing: 0;
+  --tokens-button-paragraph-indent: 0px;
+  --tokens-button-text-case: uppercase;
+  --tokens-button-text-decoration: none;
+  --tokens-button-small-font-family: Impact;
+  --tokens-button-small-font-weight: 500;
+  --tokens-button-small-line-height: 14px;
+  --tokens-button-small-font-size: 12px;
+  --tokens-button-small-letter-spacing: 0%;
+  --tokens-button-small-paragraph-spacing: 0;
+  --tokens-button-small-paragraph-indent: 0px;
+  --tokens-button-small-text-case: uppercase;
+  --tokens-button-small-text-decoration: none;
 }
