--- a/src/tokens/css/_variables.css
+++ b/src/tokens/css/_variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Sat, 22 Jun 2024 09:45:59 GMT
+ * Generated on Sat, 22 Jun 2024 10:15:33 GMT
  */
 
 
@@ -84,10 +84,13 @@
   --font-size-2: 16px;
   --font-size-3: 18px;
   --font-size-4: 20px;
-  --font-size-5: 24;
-  --font-size-6: 32;
-  --font-size-7: 40;
-  --font-size-8: 48;
+  --font-size-5: 24px;
+  --font-size-6: 32px;
+  --font-size-7: 40px;
+  --font-size-8: 48px;
+  --font-size-small-icon: 16px;
+  --font-size-medium-icon: 24px;
+  --font-size-large-icon: 36px;
   --letter-spacing-0: 0%;
   --paragraph-spacing-0: 0;
   --paragraph-indent-0: 0px;
