--- a/src/tokens/css/_variables.css
+++ b/src/tokens/css/_variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Sun, 23 Jun 2024 15:42:16 GMT
+ * Generated on Sun, 23 Jun 2024 15:58:22 GMT
  */
 
 
@@ -67,6 +67,11 @@
   --tokens-badge-text-error: var(--tokens-color-secondary-red-red-dark);
   --tokens-badge-text-success: var(--tokens-color-secondary-green-green-dark);
   --tokens-badge-text-warning: var(--tokens-color-secondary-yellow-yellow-dark);
+  --tokens-badge-hoover-text-dark: var(--tokens-color-grayscale-black-500);
+  --tokens-badge-hoover-text-light: var(--tokens-color-grayscale-black-700);
+  --tokens-badge-hoover-text-error: var(--tokens-color-secondary-red-red);
+  --tokens-badge-hoover-text-success: var(--tokens-color-secondary-green-green);
+  --tokens-badge-hoover-text-warning: var(--tokens-color-secondary-yellow-yellow);
   --spacing-spacing-1: 0.25rem;
   --spacing-spacing-2: 0.5rem;
   --spacing-spacing-3: 0.75rem;
