--- a/src/tokens/css/_variables.css
+++ b/src/tokens/css/_variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Sun, 23 Jun 2024 15:58:22 GMT
+ * Generated on Mon, 24 Jun 2024 13:08:44 GMT
  */
 
 
@@ -59,16 +59,19 @@
   --tokens-icon-primary-color: var(--tokens-color-grayscale-black-900);
   --tokens-badge-dark-bg: var(--tokens-color-grayscale-black-900);
   --tokens-badge-light-bg: var(--tokens-color-grayscale-black-100);
+  --tokens-badge-brown-bg: var(--tokens-color-primary-brown-brown-500);
   --tokens-badge-warning-bg: var(--tokens-color-secondary-yellow-yellow-light);
   --tokens-badge-success-bg: var(--tokens-color-secondary-green-green-light);
   --tokens-badge-error-bg: var(--tokens-color-secondary-red-red-light);
   --tokens-badge-text-dark: var(--tokens-color-grayscale-white);
   --tokens-badge-text-light: var(--tokens-color-grayscale-black-900);
+  --tokens-badge-text-brown: var(--tokens-color-grayscale-white);
   --tokens-badge-text-error: var(--tokens-color-secondary-red-red-dark);
   --tokens-badge-text-success: var(--tokens-color-secondary-green-green-dark);
   --tokens-badge-text-warning: var(--tokens-color-secondary-yellow-yellow-dark);
   --tokens-badge-hoover-text-dark: var(--tokens-color-grayscale-black-500);
   --tokens-badge-hoover-text-light: var(--tokens-color-grayscale-black-700);
+  --tokens-badge-hoover-text-brown: var(--tokens-color-primary-brown-brown-100);
   --tokens-badge-hoover-text-error: var(--tokens-color-secondary-red-red);
   --tokens-badge-hoover-text-success: var(--tokens-color-secondary-green-green);
   --tokens-badge-hoover-text-warning: var(--tokens-color-secondary-yellow-yellow);
